fix: Styling of profile nav on smaller devices

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -13,3 +13,20 @@ body {
     flex: 1 1 auto;
   }
 }
+
+#profile-nav {
+  border-bottom: none;
+
+  // Scrollable
+  overflow-y: hidden;
+  overflow-x: auto;
+  flex-wrap: nowrap;
+
+  // Hide Scrollbar, should only affect mobile/tablet
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
